--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,28 @@
 .quoteS {
 
 text-align: right;
-
+color: #999;；
+}
+@font-face{
+    font-family: 'HYZhangJTJ';
+    src : url("HYZhangJTJ.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
 }
 
-body
+body{
+    font-family: 'HYZhangJTJ';
 
-{
-
-font-family:"Microsoft YaHei",Arial,Helvetica,sans-serif,"宋体";
 }
-
+/* h2 {
+  color: #515151;
+  font-size: 50px;
+  border-radius: 5px;
+  border: solid 1px #999;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+} */
 img{
   width: 100%;
 }
