--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* 幻灯片 */
-.focus{ width:400px; height:180px; border-radius: 15px; box-shadow:0px 5px 15px #c6c4c4; ;margin:0 auto; position:relative; overflow:hidden;   }
+.focus{ width:400px; height:180px; -webkit-border-radius: 15px;-moz-border-radius: 15px;border-radius: 15px; box-shadow:0px 5px 15px #c6c4c4; ;margin:0 auto; position:relative; overflow:hidden;   }
 .focus .hd{ width:100%; height:11px;   position:absolute; z-index:1; bottom:5px; text-align:center;  }
 .focus .hd ul{ display:inline-block; height:5px; padding:3px 5px; background-color:rgba(255,255,255,0.7);
   -webkit-border-radius:5px; -moz-border-radius:5px; border-radius:5px; font-size:0; vertical-align:top;
