--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ h2 {
   border: solid 1px #999; */
   margin: 10px;
   margin-bottom: 20px;
-  text-align: center;
+  text-align: left;
   font-weight: normal;
 }
 img.full-width {
@@ -76,4 +76,9 @@ h1 {
 .sect-slogan {
 margin-bottom: 20px;
 margin-top: 0px;
+}
+
+.tips {
+position: fixed;
+right: 10px;
 }
